# onefusion-demo

./: .gitignore
custom_one/: .env.example  .gitignore  README.md  pyproject.toml  test_claude_sdk.py  test_tts.py
custom_one/src/custom_one/: cli.py  config.py  main.py
custom_one/src/custom_one/api/: routes.py
custom_one/src/custom_one/models/: schemas.py
custom_one/src/custom_one/services/: animation_generator.py  pipeline.py  script_generator.py  session_manager.py  tts_service.py  video_renderer.py
custom_one/src/custom_one/static/webui/: index.html
custom_one/templates/: animation_prompt.md  script_prompt.md
custom_sub/: .env.example  .gitignore  README.md  article.md  pyproject.toml
custom_sub/src/custom_sub/: __init__.py  cli.py  config.py  main.py
custom_sub/src/custom_sub/api/: models.py  routes.py
custom_sub/src/custom_sub/services/: animator.py  pipeline.py  renderer.py  scriptwriter.py  session.py  tts.py
custom_sub/src/custom_sub/templates/scene_base/: index.html  package.json  vite.config.ts
custom_sub/src/custom_sub/templates/scene_base/src/: App.tsx  SceneContent.tsx  types.ts
custom_sub/src/custom_sub/templates/scene_base/src/components/: Subtitle.tsx
custom_sub/src/custom_sub/templates/scene_base/src/utils/: animation.ts
custom_sub/src/custom_sub/web/static/: index.html
custom_sub_v2/: .env.example  .gitignore  README.md  pyproject.toml
custom_sub_v2/src/custom_sub_v2/: __init__.py  cli.py  config.py  main.py
custom_sub_v2/src/custom_sub_v2/api/: models.py  routes.py
custom_sub_v2/src/custom_sub_v2/services/: animator.py  logger.py  pipeline.py  renderer.py  scriptwriter.py  session.py  tts.py
custom_sub_v2/src/custom_sub_v2/templates/project_base/: index.html  package.json  vite.config.ts
custom_sub_v2/src/custom_sub_v2/templates/project_base/src/: App.tsx
custom_sub_v2/src/custom_sub_v2/templates/project_base/src/hooks/: useFrame.ts
custom_sub_v2/src/custom_sub_v2/templates/project_base/src/scenes/Scene01/: index.tsx
custom_sub_v2/web/: index.html  package-lock.json  package.json
custom_sub_v2/web/src/: App.tsx  main.tsx  theme.tsx
custom_sub_v2/web/src/api/: client.ts
custom_sub_v2/web/src/components/: LogPanel.tsx  PipelineNode.tsx  SessionList.tsx  SubmitForm.tsx  ThemeToggle.tsx  WorkflowGraph.tsx  WorkflowView.tsx
remotion_one/: .env.example  .gitignore  README.md  pyproject.toml
remotion_one/src/remotion_one/: __init__.py  cli.py  config.py  main.py  models.py  pipeline.py  session.py
remotion_one/src/remotion_one/api/: routes.py
remotion_one/src/remotion_one/services/: remotion_gen.py  renderer.py  scriptwriter.py  tts.py
remotion_one/web/: index.html
remotion_sub/: .env.example  .gitignore  README.md  pyproject.toml
remotion_sub/src/remotion_sub/: cli.py  config.py  database.py  main.py
remotion_sub/src/remotion_sub/api/: routes.py
remotion_sub/src/remotion_sub/models/: schemas.py
remotion_sub/src/remotion_sub/prompts/: remotion-video-animator.md
remotion_sub/src/remotion_sub/services/: pipeline.py  renderer.py  (+4 more)
(+1 files in other folders)
